--- a/class_reservoir/class_reservoir.vcxproj
+++ b/class_reservoir/class_reservoir.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="class_reservoir.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="reservoir.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="reservoir.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
